--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,19 +3,46 @@ name: CI
 on: [push]
 
 jobs:
-    phpunit:
-        runs-on: ubuntu-latest
+  phpunit:
+    runs-on: ubuntu-latest
 
-        steps:
-        - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-        - uses: shivammathur/setup-php@9e72090525849c5e82e596468b86eb55e9cc5401 # v2
-          with:
-            php-version: '8.2.0'
-            tools: composer:v2.2
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
-        - name: Install Dependencies
-          run: composer install --no-progress --prefer-dist --no-suggest
+      - uses: shivammathur/setup-php@9e72090525849c5e82e596468b86eb55e9cc5401 # v2
+        with:
+          php-version: '8.2.0'
+          tools: composer:v2.2
 
-        - name: Run Unit Tests
-          run: |
-            php vendor/bin/phpunit -c dev/tests/unit/phpunit.xml --testsuite Magento_GRA -v
+      - name: Install Dependencies
+        run: composer install --no-progress --prefer-dist --no-suggest
+
+      - name: Clone Wiki Repo
+        run: |
+          git clone https://github.com/jeevi-ziffity/magento2.wiki.git wiki
+
+      - name: Run PHPUnit and Save Coverage Report to Wiki
+        run: |
+          TIMESTAMP=$(date +"%Y-%m-%d-%H-%M-%S")
+          WIKI_PAGE="wiki/Code-Coverage-$TIMESTAMP.md"
+
+          echo "# Code Coverage Report – $TIMESTAMP" > $WIKI_PAGE
+          echo "" >> $WIKI_PAGE
+          echo "\`\`\`" >> $WIKI_PAGE
+
+          XDEBUG_MODE=coverage php vendor/bin/phpunit \
+            -c dev/tests/unit/phpunit.xml \
+            --testsuite Magento_GRA \
+            --coverage-filter=app/code/ \
+            --coverage-text >> $WIKI_PAGE
+
+          echo "\`\`\`" >> $WIKI_PAGE
+
+      - name: Commit & Push Coverage Report to Wiki
+        run: |
+          cd wiki
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "Add code coverage report – $(date)"
+          git push origin main || git push origin master
