--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Clone Wiki Repo (Authenticated)
         run: |
           git clone https://x-access-token:${{ secrets.WIKI_PAT }}@github.com/${{ github.repository }}.wiki.git wiki
-
+          cd wiki
+          git remote set-url origin https://x-access-token:${{ secrets.WIKI_PAT }}@github.com/${{ github.repository }}.wiki.git
 
       - name: Run PHPUnit and Save Coverage Report to Wiki
         run: |
@@ -45,5 +46,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "Add code coverage report – $(date)"
+          git commit -m "Add code coverage report – $(date)" || echo "No changes to commit"
           git push origin master
