Output not visible in console issue fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
             -c dev/tests/unit/phpunit.xml \
             --testsuite Magento_GRA \
             --coverage-filter=app/code/ \
-            --coverage-text >> $WIKI_PAGE
+            --coverage-text | tee -a $WIKI_PAGE
 
           echo "\`\`\`" >> $WIKI_PAGE
 
